--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 .container{
     width: 80%;
@@ -23,7 +24,7 @@
 
        /* start nav */
 
-.main_nave{
+.main_nave {
     margin: 30px auto;
     background-color: white;
     width: 100%;
@@ -32,7 +33,8 @@
     align-items: center;
     border-radius: 50px;
 }
-.main_nave span{
+
+.main_nave span {
     font-size: 30px;
     border: 3px solid #f9330b;
     margin: 10px;
@@ -40,6 +42,7 @@
     padding: 0px 3px 1px 3px;
     font-weight: bold;
 }
+
 .main_nave ul{
     list-style: none;
 }
@@ -98,32 +101,30 @@
     margin: 8px;
     color: #5d626d;
 }
-.button1{
+
+.button2,
+.button1 {
     margin: 50px 30px 0px 20px;
     padding: 10px;
     border-radius: 50px;
     outline: none;
+    color: white;
+    width: 180px;
+    height: 50px;
+    cursor: pointer;
+    transition: 0.7s;
+}
+
+.button1 {
     border-color: #f9320b7a;
     background-color: #f9320b;
-    color: white;
-    width: 180px;
-    height: 50px;
-    cursor: pointer;
 }
-.button2{
-    margin: 50px 30px 0px 20px;
-    padding: 10px;
-    border-radius: 50px;
-    outline: none;
-    background-color: #141f31;
-    color: white;
-    width: 180px;
-    height: 50px;
-    cursor: pointer;
-}
-.button2:active,
-.button1:active{
-    font-size: 13px;
+
+.button2 { background-color: #141f31; }
+
+.button2:hover,
+.button1:hover {
+    font-size: 12.9px;
 }
 
 .main_header__section_image_MarkParker .image_MarkParker{
@@ -142,28 +143,35 @@
 
     /* start main */
 
-main{
-    height: 500px;
-}
-main .container{
+main .abut_us {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
+
 main .abut_us1,
 main .abut_us2{
     width: calc(90% / 2);
 }
+
+.abut_us1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .abut_us1 div{
     width: 354px;
     height: 500px ;
     background-image: url(../image/pexels-photo.jpg);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     border-radius: 20px;
     border: 2px solid rgb(155, 148, 148);
-    position: relative;
-    box-shadow: 0px 0px 15px 3px rgb(156 151 151);
+    /* box-shadow: 0px 0px 15px 3px rgb(156 151 151); */
+    box-shadow: 0px 0px 6px 1px #999;
+    position: absolute;
 }
+
 .abut_us_button{
     width: 173px;
     height: 45px;
@@ -172,11 +180,12 @@ main .abut_us2{
     background-color: #f9330b;
     color: white;
     outline: none;
-    position: absolute;
+    position: relative;
     top: 80%;
     left: 25%;
     cursor: pointer;
 }
+
 .abut_us_button:active{
     font-size: 12px;
 }
@@ -200,7 +209,7 @@ main .abut_us2{
 }
 /* progress{
     width: 100%;
-    -webkit-appearance: none; 
+    -webkit-appearance: none;
     border: 2px solid cadetblue;
     &::-webkit-progress-bar{
         background: chartreuse;
@@ -212,6 +221,7 @@ progress{
     height: 15px;
     -webkit-appearance: none;
     appearance: none;
+    transition: .1s;
 }
 progress::-webkit-progress-bar{
     background-color: #E9EAEC;
@@ -259,37 +269,51 @@ progress::-webkit-progress-bar{
 
         /* start contain */
 
+
+
 .Work_Process{
     overflow: hidden;
+    text-align: center;
     height: 400px;
     background-color: #F9F8FF;
-    text-align: center;
     border-bottom: 3px solid #F8BBB5;
     border-top: 3px solid #F8BBB5;
     border-top-left-radius: 120px ;
-    margin: 50px 0;
     position: relative;
+    padding: 30px;
 }
+
 .Work_Process h2{
-    margin: 6% 0;
+    text-align: center;
     font-size: 37px;
 }
-.icon_z-index{
-    z-index: 1;
-    width: 42%;
+
+.Work_Process_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 77%;
+}
+.Work_Process .Work_Process_container .icon_z-index{
+    z-index: 0;
+    width: 45%;
     height: 5px;
     background-color: #fac5bb;
     position: absolute;
-    top: 217px;
-    left: 388px;
+    top: 50%;
+    left: 27%;
 }
-.main_icon{
-    z-index: 1;
+
+.Work_Process .Work_Process_container .main_icon{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.icon{
+
+.Work_Process .Work_Process_container .main_icon .iconc{
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
     width: 95px;
     height: 95px;
     color: #ffa491;
@@ -297,19 +321,12 @@ progress::-webkit-progress-bar{
     border: 3px dashed #e4b3a8;
     border-radius: 50%;
     font-size: 57px;
-    display: inline-flex;
-    justify-content: space-evenly;
-    align-items: center;
     margin: 0 40px;
-    z-index: 5;
+    z-index: 2;
     transition: .6s;
 }
-.Work_Process .main_icon span{
-    width: 100px;
-    height: 100px;
-    background-color: black;
-}
-.icon:hover {
+.Work_Process .Work_Process_container .main_icon div {z-index: 5;}
+.Work_Process .Work_Process_container .main_icon .iconc:hover {
     background-color: #F9350E;
     border: 3px dashed white;
     color: white;
@@ -320,16 +337,24 @@ progress::-webkit-progress-bar{
 
         /* start footer */
 
-footer{
+footer {
     overflow: hidden;
     margin: 50px 0;
 }
-footer h2{
+
+footer h2 {
     text-align: center;
     margin: 35px 0 50px 0;
     font-size: 40px;
 }
-.left_box{
+
+footer article{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.left_box {
     overflow: hidden;
     width: 30%;
     height: 400px;
@@ -340,19 +365,14 @@ footer h2{
     box-shadow: 0 0 12px 0px #a09b9b;
     transition: .6s;
 }
-footer article{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-footer .left_box .fa-html5{
+
+footer .left_box .fa-html5 {
     text-align: center;
     font-size: 60px;
-    color: #F9320B;
+    color: #f9330b;
     margin: 23px 0;
-    box-shadow: 0 0 12px 3px;
-
 }
+
 .left_box p{
     padding: 26px;
     font-size: 19px;
@@ -360,8 +380,15 @@ footer .left_box .fa-html5{
     text-align: center;
 }
 .left_box:hover{
-    transform: translateY(-26px);
+    transform: scale(1.1);
 }
+
+.left_box:hover .button_footer{
+    color: white;
+    border: 2px solid #F9320B;
+    background-color:#F9320B ;
+}
+
 footer .button_footer{
     width: 172px;
     height: 45px;
@@ -375,6 +402,7 @@ footer .button_footer{
     cursor: pointer;
     transition: .5s;
 }
+
 footer .button_footer:hover{
     color: white;
     border: 2px solid #F9320B;
